# Core

./: .gitignore  README.md  app.py  celerybeat-schedule.dir  daphne.ini  dev  lint.py  nginx.conf  prod  pyproject.toml  test.py  uwsgi.ini
api/: celery.py  metrics.py  tasks.py  urls.py  views.py
core/: asgi.py  celery.py  settings.py  urls.py
frontend/: package.json  urls.py  views.py  webpack.config.js
frontend/public/: index.html
frontend/src/: index.jsx
frontend/src/components/: video.jsx
frontend/src/pages/: about.jsx
frontend/src/pages/sections/: section1.jsx  section2.jsx  section3.jsx  section4.jsx  section5.jsx  section6.jsx  section7.jsx
frontend/src/pages/utils/: funcs.jsx  section.jsx
frontend/static/frontend/: main.js  main.js.LICENSE.txt  process_image.wasm
frontend/templates/frontend/: index.html
logs/: README.md
static/frontend/: main.js  main.js.LICENSE.txt  process_image.js
web_socket/: admin.py  apps.py  consumers.py  models.py  random_forest_model.pkl  routing.py  urls.py  utils.py  views.py
web_socket/migrations/: 0001_initial.py
