[tool.poetry]
name = "deeplearning-application"
version = "0.1.0"
description = ""
authors = ["Creeper Eye <iostream1204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
uwsgi = "^2.0.27"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
mediapipe = "^0.10.15"
opencv-python = "^4.10.0.84"
channels = "^4.1.0"
daphne = "^4.1.2"
channels-redis = "^4.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
