[tool.poetry]
name = "deeplearning-application"
version = "0.1.0"
description = ""
authors = ["Creeper Eye <iostream1204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
uwsgi = "^2.0.27"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
mediapipe = "^0.10.15"
opencv-python = "^4.10.0.84"
channels = "^4.1.0"
daphne = "^4.1.2"
channels-redis = "^4.2.0"
scikit-learn = "1.5.2"
joblib = "^1.4.2"
celery = {extras = ["redis"], version = "^5.4.0"}
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
python-dotenv = "^1.0.1"
autopep8 = "^2.3.2"
django-redis = "^5.4.0"
django-redis-sessions = "^0.6.2"
django-prometheus = "^2.3.1"
psutil = "^7.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
